Made the card, for images, worked on landing page

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.home {
+  color: red;
+  width: 100%;
+  height: 100%;
+}
+.about1{
+  color: palevioletred;
+
+}
