--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,8 +6,10 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f8f8f8;
+    /*background-color: #f8f8f8;*/
     /* Add additional styles as needed */
+    background: #FFFDF4  repeat center center;
+    background: linear-gradient(180deg,rgba(251,246,234,0) 45.83%,#FBF6EA 100%);
   }
 
   .textContainer {
@@ -31,4 +33,21 @@
     font-size: 18px;
     margin-top: 20px;
     /* Add additional styles as needed */
+  }
+
+  .bubble-animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: aquamarine;
+
+
+
+  }
+  img{
+    max-width: 100%;
+    height: auto;
   }
