--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -2,7 +2,8 @@
 
 .portfolio {
     padding: 50px;
-    background-color: #f8f8f8;
+    /*background-color: #f8f8f8;*/
+    background: #FFFDF4 repeat center center;
     /* Add additional styles as needed */
   }
 
